# octez-interop

./: .gitignore  Cargo.toml  build.rs
lib/: dune
octez_microcosm/: dune-project  octez_microcosm.opam
octez_microcosm/lib/: dune
octez_microcosm/test/: dune
src/: main.rs
