(lang dune 3.5)
(name octez_microcosm)

(generate_opam_files true)

(source
 (github archaephyrryx/octez-interop))

(authors "Peter Duchovni")

(maintainers "Maintainer Name")

(license LICENSE)

(package
 (name octez_microcosm)
 (synopsis "Proof-of-concept Rust-OCaml FFI")
 (description "Experimental proof-of-cocenpt for calling Octez from Rust code")
 (depends ocaml dune)
  )
